--- a/ProcesosYServiciosT1/001-Ejecutables. Procesos. Servicios/009-workersemaforo.html
+++ b/ProcesosYServiciosT1/001-Ejecutables. Procesos. Servicios/009-workersemaforo.html
@@ -8,7 +8,7 @@
       const nucleos = navegador.hardwareConcurrency // Saco el número de núcleos
       console.log("Tu ordenador tiene",nucleos,"núcleos")
       let trabajadores = [];                          // Creo un array
-      let numerotrabajadores = 12;                    // Especifico cuantos workers quiero
+      let numerotrabajadores = nucleos;                    // Especifico cuantos workers quiero
       let semaforo = 0
       for(let w = 0;w<numerotrabajadores;w++){        // Creo un for para crear tantos trabajadores como necesite
         trabajadores[w] = new Worker("009-worker.js");   // Creo una instancia de Worker
