--- a/ProcesosYServiciosT2/006-Compartición de información entre hilos/016-chat con colores.html
+++ b/ProcesosYServiciosT2/006-Compartición de información entre hilos/016-chat con colores.html
@@ -1,73 +1,100 @@
 <!doctype html>
-<html>
+<html lang="es">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mensajes en Tiempo Real</title>
     <style>
-      section{
-        width:400px;
-        height:800px;
-        border:1px solid grey;
-        overflow-y:scroll;
+      section {
+        width: 400px;
+        height: 800px;
+        border: 1px solid grey;
+        overflow-y: scroll;
       }
-      article{
-        box-sizing:border-box;
-        padding:20px;
-        background:lightgreen;
-        border-radius:0px 10px 10px 10px;
-        margin:10px;
-        width:80%;
-        box-shadow:0px 2px 4px rgba(0,0,0,0.3);
+      article {
+        box-sizing: border-box;
+        padding: 20px;
+        background: lightgreen;
+        border-radius: 0px 10px 10px 10px;
+        margin: 10px;
+        width: 80%;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
       }
     </style>
   </head>
   <body>
     <main>
-      <input id="usuario" placeholder="Introduce tu usuario">
+      <input id="usuario" placeholder="Introduce tu usuario" />
       <section></section>
-      <input id="mensaje">
+      <input id="mensaje" placeholder="Escribe tu mensaje" />
     </main>
+
     <script>
       ///////////////////////////////// BUCLE DE LECTURA ///////////////////////////////////////
-      function bucle(){                                                                 // Defino una funcion de bucle
-        fetch("http://192.168.1.137:5000/dame")                                         // Realizo una peticion de recepcion
-        .then(function(response){
-          return response.json()                                                         // Convierto la respuesta a json
-        })
-        .then(function(datos){                                                          // Cuando reciba los datos
-        console.log(datos)
-          let seccion = document.querySelector("section")                               // Selecciono el contenedor de destino
-          seccion.innerHTML = ""                                                        // Vacío el contenedor
-          datos.forEach(function(dato){                                                 // PAra cada uno de los datos que haya venido
-            let suma = 0;                                                               // Creo una suma inicial
-            for (let i = 0; i < dato.usuario.length; i++) {                             // Para cada una de las letras del usuario
-                suma += dato.usuario.charCodeAt(i);                                     // Le actualizo a la suma el valor numerico ascii de cada uno de los carac
-            }
-            suma %= 255                                                                 // Mediante el resto entero de la division situo el valor en un rango controlado
-            console.log(suma)
-            let bloque = document.createElement("article")                              // Creo un nuevo articulo
-            
-            let autor = document.createElement("h3")                                    // Creo un elemento h3
-            autor.textContent = dato.usuario                                            // Al autor le pongo el dato de autor
-            let parrafo = document.createElement("p")                                   // Creo un elemento de parrafo
-            parrafo.textContent = dato.mensaje                                          // Al parrafo le pongo el texto
-            bloque.appendChild(autor)                                                   // Al articulo le pongo el autor
-            bloque.appendChild(parrafo)                                                 // Al articulo le pongo el aprrafo
-            seccion.appendChild(bloque)                                                 // A la seccion le pongo el articulos
-            bloque.style.background = "hsl("+suma+",127%,50%)"                          // Le cambio el color de cada bloque en funcion del nombre de usuario
+      function bucle() {
+        // Realiza una petición GET al servidor para obtener los mensajes
+        fetch("http://192.168.1.41:5000/dame")
+          .then(response => response.json()) // Convierte la respuesta en formato JSON
+          .then(datos => {
+            console.log(datos);
+            const seccion = document.querySelector("section"); // Selecciona el contenedor donde se mostrarán los mensajes
+            seccion.innerHTML = ""; // Limpia el contenido del contenedor
+
+            // Itera sobre cada mensaje recibido
+            datos.forEach(dato => {
+              let suma = 0;
+              if (dato.usuario) { // Verifica si 'usuario' no es null o undefined
+                for (let i = 0; i < dato.usuario.length; i++) {
+                  suma += dato.usuario.charCodeAt(i); // Calcula la suma de los códigos de caracteres del usuario
+                }
+                suma %= 255; // Modulo 255 para obtener un valor en el rango adecuado para colores HSL
+              }
+
+              // Crea un nuevo bloque para mostrar el mensaje
+              let bloque = document.createElement("article");
+
+              let autor = document.createElement("h3");
+              autor.textContent = dato.usuario; // Muestra el nombre del usuario
+
+              let parrafo = document.createElement("p");
+              parrafo.textContent = dato.mensaje; // Muestra el mensaje
+
+              // Añade el autor y el mensaje al bloque
+              bloque.appendChild(autor);
+              bloque.appendChild(parrafo);
+              seccion.appendChild(bloque);
+
+              // Cambia el fondo del bloque según el valor calculado de 'suma'
+              bloque.style.background = `hsl(${suma}, 127%, 50%)`;
+            });
           })
-          seccion.scrollTop = 100000000000                                              // Hago un scroll infinito para asegurar que siempre se va abajo del todo
-        })
-        clearTimeout(temporizador)                                                      // Detengo el temporizador
-        temporizador = setTimeout("bucle()",1000)                                       // Vuelvo a arrancar el bucle dentro de un segundo
+          .catch(error => console.error("Error al obtener los mensajes:", error));
+
+        // Recursivamente llama a la función cada 1 segundo
+        setTimeout(bucle, 1000);
       }
+
       ///////////////////////////////// ENVÍO DE MENSAJES ///////////////////////////////////////
-      let entrada = document.querySelector("#mensaje")                                     // Selecciono la entrada
-      let usuario = document.querySelector("#usuario")                                     // Selecciono la entrada
-      entrada.onchange = function(){                                                    // Cuando cambie la entrada
-        fetch("http://192.168.1.137:5000/toma?mensaje="+encodeURI(this.value)+"&usuario="+encodeURI(usuario.value))          // Realizo una peticion de envio
-        this.value = ""                                                                // Vacío la entrada para que el usuario pueda seguir escribiendo
-      }
-      ///////////////////////////////// PONGO EL BUCLE EN MARCHA ///////////////////////////////////////
-      var temporizador = setTimeout("bucle()",1000)                                     // Lanzo una primera ejecución del bucle                                 
+      const entrada = document.querySelector("#mensaje"); // Selecciona el campo para escribir el mensaje
+      const usuario = document.querySelector("#usuario"); // Selecciona el campo para introducir el usuario
+
+      // Al cambiar el mensaje, se envía al servidor
+      entrada.addEventListener("change", function() {
+        const mensaje = encodeURI(this.value); // Codifica el mensaje para enviarlo por URL
+        const user = encodeURI(usuario.value); // Codifica el nombre de usuario
+
+        // Realiza la petición POST al servidor para enviar el mensaje
+        fetch(`http://192.168.1.41:5000/toma?mensaje=${mensaje}&usuario=${user}`)
+          .then(response => response.json()) // Responde con un objeto JSON
+          .then(data => {
+            console.log("Mensaje enviado:", data);
+            this.value = ""; // Vacía el campo de entrada para el próximo mensaje
+          })
+          .catch(error => console.error("Error al enviar el mensaje:", error));
+      });
+
+      ///////////////////////////////// INICIO DEL BUCLE ///////////////////////////////////////
+      setTimeout(bucle, 1000); // Llama al bucle por primera vez al cargar la página
     </script>
   </body>
 </html>
